// OWWA Region IV-A Inventory Management System — DBML for dbdiagram.io

Table offices {
  id           int       [pk, increment]
  name         varchar
  code         varchar   [unique]
  is_satellite boolean
  address      varchar
  created_at   datetime
  updated_at   datetime
}

Table departments {
  id         int       [pk, increment]
  office_id  int
  name       varchar
  code       varchar
  created_at datetime
  updated_at datetime
}

Table item_categories {
  id          int       [pk, increment]
  name        varchar
  description text
  created_at  datetime
  updated_at  datetime
}

Table items {
  id               int       [pk, increment]
  item_category_id int
  name             varchar
  unit             varchar
  reorder_level    int
  created_at       datetime
  updated_at       datetime
}

Table users {
  id            int       [pk, increment]
  name          varchar
  email         varchar   [unique]
  password      varchar
  role          varchar           // supply_custodian, unit_head, employee
  office_id     int
  department_id int
  created_at    datetime
  updated_at    datetime
}

Table requisitions {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  office_id      int
  department_id  int
  requested_by   int       // user who requested
  approved_by    int       // user who approved (nullable)
  status         varchar   // pending, approved, rejected, fulfilled, etc.
  created_at     datetime
  updated_at     datetime
}

Table requisition_items {
  id             int       [pk, increment]
  requisition_id int
  item_id        int
  quantity       int
  created_at     datetime
  updated_at     datetime
}

Table issuances {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  requisition_id int       // optional link back to requisition
  item_id        int
  office_id      int
  department_id  int
  quantity       int
  issued_by      int       // user who issued
  issued_to      int       // user who received (or unit head)
  issued_at      datetime
  created_at     datetime
  updated_at     datetime
}

Table acquisitions {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  office_id      int
  quantity       int
  unit_cost      decimal
  acquired_at    datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table transfers {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  from_office_id int
  to_office_id   int
  quantity       int
  transferred_at datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table disposals {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  office_id      int
  quantity       int
  reason         varchar
  disposed_at    datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table ai_procurement_runs {
  id          int       [pk, increment]
  period_from date
  period_to   date
  status      varchar   // draft, completed, archived, etc.
  created_by  int       // user
  created_at  datetime
  updated_at  datetime
}

Table ai_procurement_items {
  id                int       [pk, increment]
  run_id            int
  item_id           int
  office_id         int
  suggested_qty_min int
  suggested_qty_max int
  priority          varchar   // e.g., high/medium/low
  reason            text
  created_at        datetime
  updated_at        datetime
}

Table fiscal_years {
  id         int       [pk, increment]
  name       varchar   // e.g., FY 2025
  start_date date
  end_date   date
  is_default boolean
  created_at datetime
  updated_at datetime
}

Table rag_embeddings {
  id         int       [pk, increment]
  source     varchar
  content    text
  metadata   text
  embedding  text      // vector stored as JSON or similar
  created_at datetime
  updated_at datetime
}

Ref: users.office_id > offices.id
Ref: users.department_id > departments.id

Ref: departments.office_id > offices.id

Ref: items.item_category_id > item_categories.id

Ref: requisitions.office_id > offices.id
Ref: requisitions.department_id > departments.id
Ref: requisitions.requested_by > users.id
Ref: requisitions.approved_by > users.id

Ref: requisition_items.requisition_id > requisitions.id
Ref: requisition_items.item_id > items.id

Ref: issuances.item_id > items.id
Ref: issuances.office_id > offices.id
Ref: issuances.department_id > departments.id
Ref: issuances.requisition_id > requisitions.id
Ref: issuances.issued_by > users.id
Ref: issuances.issued_to > users.id

Ref: acquisitions.item_id > items.id
Ref: acquisitions.office_id > offices.id
Ref: acquisitions.recorded_by > users.id

Ref: transfers.item_id > items.id
Ref: transfers.from_office_id > offices.id
Ref: transfers.to_office_id > offices.id
Ref: transfers.recorded_by > users.id

Ref: disposals.item_id > items.id
Ref: disposals.office_id > offices.id
Ref: disposals.recorded_by > users.id

Ref: ai_procurement_runs.created_by > users.id

Ref: ai_procurement_items.run_id > ai_procurement_runs.id
Ref: ai_procurement_items.item_id > items.id
Ref: ai_procurement_items.office_id > offices.id

Table users {
  id              int       [pk, increment]
  name            varchar
  email           varchar   [unique]
  password        varchar
  role            varchar   // supply_custodian, unit_head, employee
  office_id       int
  department_id   int
  created_at      datetime
  updated_at      datetime
}

Table offices {
  id             int       [pk, increment]
  name           varchar
  code           varchar   [unique]
  is_satellite   boolean
  address        varchar
  created_at     datetime
  updated_at     datetime
}

Table departments {
  id         int       [pk, increment]
  office_id  int
  name       varchar
  code       varchar
  created_at datetime
  updated_at datetime
}

Table item_categories {
  id          int       [pk, increment]
  name        varchar
  description text
  created_at  datetime
  updated_at  datetime
}

Table items {
  id               int       [pk, increment]
  item_category_id int
  name             varchar
  unit             varchar
  reorder_level    int
  created_at       datetime
  updated_at       datetime
}

Table requisitions {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  office_id      int
  department_id  int
  requested_by   int       // user who requested
  approved_by    int       // user who approved (nullable)
  status         varchar   // pending, approved, rejected, fulfilled, etc.
  created_at     datetime
  updated_at     datetime
}

Table requisition_items {
  id             int       [pk, increment]
  requisition_id int
  item_id        int
  quantity       int
  created_at     datetime
  updated_at     datetime
}

Table issuances {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  requisition_id int       // optional link back to requisition
  item_id        int
  office_id      int
  department_id  int
  quantity       int
  issued_by      int       // user who issued
  issued_to      int       // user who received (or unit head)
  issued_at      datetime
  created_at     datetime
  updated_at     datetime
}

Table acquisitions {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  office_id      int
  quantity       int
  unit_cost      decimal
  acquired_at    datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table transfers {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  from_office_id int
  to_office_id   int
  quantity       int
  transferred_at datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table disposals {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  office_id      int
  quantity       int
  reason         varchar
  disposed_at    datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table ai_procurement_runs {
  id          int       [pk, increment]
  period_from date
  period_to   date
  status      varchar   // draft, completed, archived, etc.
  created_by  int       // user
  created_at  datetime
  updated_at  datetime
}

Table ai_procurement_items {
  id                 int       [pk, increment]
  run_id             int
  item_id            int
  office_id          int
  suggested_qty_min  int
  suggested_qty_max  int
  priority           varchar   // e.g., high/medium/low
  reason             text
  created_at         datetime
  updated_at         datetime
}

Table fiscal_years {
  id         int       [pk, increment]
  name       varchar   // e.g., FY 2025
  start_date date
  end_date   date
  is_default boolean
  created_at datetime
  updated_at datetime
}

Table rag_embeddings {
  id         int       [pk, increment]
  source     varchar
  content    text
  metadata   text
  embedding  text      // vector stored as JSON or similar
  created_at datetime
  updated_at datetime
}

Ref: users.office_id > offices.id
Ref: users.department_id > departments.id

Ref: departments.office_id > offices.id

Ref: items.item_category_id > item_categories.id

Ref: requisitions.office_id > offices.id
Ref: requisitions.department_id > departments.id
Ref: requisitions.requested_by > users.id
Ref: requisitions.approved_by > users.id

Ref: requisition_items.requisition_id > requisitions.id
Ref: requisition_items.item_id > items.id

Ref: issuances.item_id > items.id
Ref: issuances.office_id > offices.id
Ref: issuances.department_id > departments.id
Ref: issuances.requisition_id > requisitions.id
Ref: issuances.issued_by > users.id
Ref: issuances.issued_to > users.id

Ref: acquisitions.item_id > items.id
Ref: acquisitions.office_id > offices.id
Ref: acquisitions.recorded_by > users.id

Ref: transfers.item_id > items.id
Ref: transfers.from_office_id > offices.id
Ref: transfers.to_office_id > offices.id
Ref: transfers.recorded_by > users.id

Ref: disposals.item_id > items.id
Ref: disposals.office_id > offices.id
Ref: disposals.recorded_by > users.id

Ref: ai_procurement_runs.created_by > users.id

Ref: ai_procurement_items.run_id > ai_procurement_runs.id
Ref: ai_procurement_items.item_id > items.id
// OWWA Region IV-A Inventory Management System — DBML for dbdiagram.io

Table offices {
  id           int       [pk, increment]
  name         varchar
  code         varchar   [unique]
  is_satellite boolean
  address      varchar
  created_at   datetime
  updated_at   datetime
}

Table departments {
  id         int       [pk, increment]
  office_id  int
  name       varchar
  code       varchar
  created_at datetime
  updated_at datetime
}

Table item_categories {
  id          int       [pk, increment]
  name        varchar
  description text
  created_at  datetime
  updated_at  datetime
}

Table items {
  id               int       [pk, increment]
  item_category_id int
  name             varchar
  unit             varchar
  reorder_level    int
  created_at       datetime
  updated_at       datetime
}

Table users {
  id            int       [pk, increment]
  name          varchar
  email         varchar   [unique]
  password      varchar
  role          varchar           // supply_custodian, unit_head, employee
  office_id     int
  department_id int
  created_at    datetime
  updated_at    datetime
}

Table requisitions {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  office_id      int
  department_id  int
  requested_by   int       // user who requested
  approved_by    int       // user who approved (nullable)
  status         varchar   // pending, approved, rejected, fulfilled, etc.
  created_at     datetime
  updated_at     datetime
}

Table requisition_items {
  id             int       [pk, increment]
  requisition_id int
  item_id        int
  quantity       int
  created_at     datetime
  updated_at     datetime
}

Table issuances {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  requisition_id int       // optional link back to requisition
  item_id        int
  office_id      int
  department_id  int
  quantity       int
  issued_by      int       // user who issued
  issued_to      int       // user who received (or unit head)
  issued_at      datetime
  created_at     datetime
  updated_at     datetime
}

Table acquisitions {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  office_id      int
  quantity       int
  unit_cost      decimal
  acquired_at    datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table transfers {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  from_office_id int
  to_office_id   int
  quantity       int
  transferred_at datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table disposals {
  id             int       [pk, increment]
  reference_code varchar   [unique]
  item_id        int
  office_id      int
  quantity       int
  reason         varchar
  disposed_at    datetime
  recorded_by    int       // user
  created_at     datetime
  updated_at     datetime
}

Table ai_procurement_runs {
  id          int       [pk, increment]
  period_from date
  period_to   date
  status      varchar   // draft, completed, archived, etc.
  created_by  int       // user
  created_at  datetime
  updated_at  datetime
}

Table ai_procurement_items {
  id                int       [pk, increment]
  run_id            int
  item_id           int
  office_id         int
  suggested_qty_min int
  suggested_qty_max int
  priority          varchar   // e.g., high/medium/low
  reason            text
  created_at        datetime
  updated_at        datetime
}

Table fiscal_years {
  id         int       [pk, increment]
  name       varchar   // e.g., FY 2025
  start_date date
  end_date   date
  is_default boolean
  created_at datetime
  updated_at datetime
}

Table rag_embeddings {
  id         int       [pk, increment]
  source     varchar
  content    text
  metadata   text
  embedding  text      // vector stored as JSON or similar
  created_at datetime
  updated_at datetime
}

Ref: users.office_id > offices.id
Ref: users.department_id > departments.id

Ref: departments.office_id > offices.id

Ref: items.item_category_id > item_categories.id

Ref: requisitions.office_id > offices.id
Ref: requisitions.department_id > departments.id
Ref: requisitions.requested_by > users.id
Ref: requisitions.approved_by > users.id

Ref: requisition_items.requisition_id > requisitions.id
Ref: requisition_items.item_id > items.id

Ref: issuances.item_id > items.id
Ref: issuances.office_id > offices.id
Ref: issuances.department_id > departments.id
Ref: issuances.requisition_id > requisitions.id
Ref: issuances.issued_by > users.id
Ref: issuances.issued_to > users.id

Ref: acquisitions.item_id > items.id
Ref: acquisitions.office_id > offices.id
Ref: acquisitions.recorded_by > users.id

Ref: transfers.item_id > items.id
Ref: transfers.from_office_id > offices.id
Ref: transfers.to_office_id > offices.id
Ref: transfers.recorded_by > users.id

Ref: disposals.item_id > items.id
Ref: disposals.office_id > offices.id
Ref: disposals.recorded_by > users.id

Ref: ai_procurement_runs.created_by > users.id

Ref: ai_procurement_items.run_id > ai_procurement_runs.id
Ref: ai_procurement_items.item_id > items.id
Ref: ai_procurement_items.office_id > offices.id